# AI-Tutor-for-Converter-Design-and-Component-Selection

./: .env.example  .gitignore  COMPONENT_CATALOG_COMMIT.md  README.md  pyproject.toml  run.py  worker.py
tutor_virtual/: __init__.py
tutor_virtual/application/: __init__.py  tutor_service.py
tutor_virtual/application/services/: __init__.py  component_recommendation.py  design_workflow.py  simulation_service.py
tutor_virtual/data/documents/: .gitkeep  .rag_metadata.json
tutor_virtual/domain/: __init__.py
tutor_virtual/domain/components/: __init__.py  models.py  selector.py
tutor_virtual/domain/converters/: __init__.py  base.py  designers.py  factory.py  utils.py
tutor_virtual/domain/ports/: __init__.py  catalog.py  repositories.py
tutor_virtual/domain/validation/: __init__.py  engine.py  rulesets.py
tutor_virtual/infrastructure/: __init__.py  ai_agent.py  i18n_service.py  task_queue.py  tools.py
tutor_virtual/infrastructure/catalogs/: __init__.py  base.py  cache.py  digikey.py  lcsc.py  mouser.py
tutor_virtual/infrastructure/rag/: __init__.py  document_processor.py  rag_service.py  vector_store.py
tutor_virtual/locales/: es.json
tutor_virtual/presentation/: __init__.py  app.py  gradio_adapter.py  gradio_app.py  spec_schema.py  translations.py
tutor_virtual/shared/: __init__.py  config.py  dto.py
